# video_pipe_c

./: .gitignore  CMakeLists.txt  pipeline.drawio
doc/: env.md
main/: VP.h  main16.cpp  main5.cpp
nodes/: vp_track_node.cpp
nodes/osd/: vp_face_osd_node_v2.cpp
objects/: vp_frame_meta.h
objects/elements/: vp_frame_element.h
sample/: 1-1-N_sample.cpp  N-N_sample.cpp
